<resources>
    <string name="app_name">FirstApp</string>
    <string name="main_thietlaptaikhoan">Thiết lập tài khoản</string>
    <string name="main_doimatkhau">ĐỔI MẬT KHẨU</string>
    <string name="main_capnhat">CẬP NHẬT</string>
    <string name="main_nam">Nam</string>
    <string name="main_nu">Nữ</string>
    <string name="main_khac">Khác</string>
    <string name="main_thongtincanhan">Thông tin cá nhân</string>
    <string name="chat_tinnhan">Tin nhắn</string>
    <string name="main_trangchu">Trang chủ</string>
    <string name="main_khambenh">Khám bệnh</string>
    <string name="main_xetnghiem">Xét nghiệm</string>
    <string name="main_hoso">Hồ sơ</string>
    <string name="main_taikhoan">Tài khoản</string>
    <string name="chat_hinhanh">Hình ảnh</string>
    <string name="login_dangkitaikhoan"><u>Đăng ký tài khoản</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_dangnhap">ĐĂNG NHẬP</string>
    <string name="login_quenmatkhau">Quên mật khẩu</string>
    <string name="login_hoacdangnhapqua">Hoặc đăng nhập qua:</string>
    <string name="login_dangnhapvoifacebook">Đăng nhập với Facebook</string>
    <string name="login_dangnhapvoiapple">Đăng nhập với Apple</string>
    <string name="login_dangnhapvoigoogle">Đăng nhập với Google</string>
    <string name="login_dangnhapvoizalo">Đăng nhập với Zalo</string>
    <string name="login_matkhau">Mật khẩu</string>
    <string name="facebook_app_id">1746717102390977</string>
    <string name="fb_login_protocol_scheme">fb1746717102390977</string>

</resources>