<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:paddingHorizontal="30dp"
    tools:context=".featureauthen.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_login_username"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:background="@drawable/background_login_icon"
        android:paddingHorizontal="13dp"
        android:paddingVertical="12dp"
        android:src="@drawable/ic_username_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_login_username"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:background="@drawable/background_login_edittext"
        android:drawableEnd="@drawable/ic_username_login"
        android:drawablePadding="11dp"
        android:paddingStart="11dp"
        android:paddingTop="14dp"
        android:paddingEnd="13dp"
        android:paddingBottom="13dp"
        android:text="HuongNT"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_login_username"
        app:layout_constraintTop_toTopOf="@id/iv_login_username" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_login_passowrd"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/background_login_icon"
        android:paddingHorizontal="15dp"
        android:paddingVertical="11dp"
        android:src="@drawable/ic_password_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login_username" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_login_password"
        android:layout_width="0dp"

        android:layout_height="43dp"
        android:background="@drawable/background_login_edittext"
        android:drawableEnd="@drawable/ic_eye"
        android:drawablePadding="11dp"
        android:inputType="textPassword"
        android:paddingStart="11dp"
        android:paddingTop="14dp"
        android:paddingEnd="13dp"
        android:paddingBottom="13dp"
        android:text="HuongNT"
        android:textColor="@color/black"
        android:textSize="016sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_login_passowrd"
        app:layout_constraintTop_toTopOf="@id/iv_login_passowrd" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login_dangkitaikhoan"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login_passowrd" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_forgotpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login_quenmatkhau"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login_passowrd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_hover"
        android:paddingHorizontal="60dp"
        android:paddingVertical="13dp"
        android:text="@string/login_dangnhap"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_forgotpw" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_otherway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login_hoacdangnhapqua"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login_login" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_zalo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_login_textview"
        android:drawableStart="@drawable/ic_zalo"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingVertical="5dp"
        android:paddingStart="18dp"
        android:text="@string/login_dangnhapvoizalo"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_otherway"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_login_textview"
        android:drawableStart="@drawable/facebook"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingVertical="5dp"
        android:paddingStart="18dp"
        android:text="@string/login_dangnhapvoifacebook"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_zalo"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_apple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_login_textview"
        android:drawableStart="@drawable/ic_apple"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:paddingVertical="5dp"
        android:paddingStart="18dp"
        android:text="@string/login_dangnhapvoiapple"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_facebook"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_login_textview"
        android:drawableStart="@drawable/ic_google"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingVertical="5dp"
        android:paddingStart="18dp"
        android:text="@string/login_dangnhapvoigoogle"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_apple"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>